M3-117: Added code signing